# QuantizedQuadrotorMPC

./: .gitignore  README.md  metrics_summary.csv  summary.json
MATLAB/: Dither_Func.m  Partition.m  main.m  (+7 more)
SITL V2/src/koopman_mpc_ros/: CMakeLists.txt  README.md  package.xml
SITL V2/src/koopman_mpc_ros/launch/: koopman_mpc_hover.launch
SITL V2/src/koopman_mpc_ros/scripts/: koopman_mpc_node.py
SITL V2/src/koopman_python/: CMakeLists.txt  README.md  package.xml  setup.py
SITL V2/src/koopman_python/koopman_python/: __init__.py  source_of_truth.py
SITL V2/src/koopman_python/koopman_python/dynamics/: __init__.py  params.py  srb.py
SITL V2/src/koopman_python/koopman_python/edmd/: __init__.py  basis.py  evaluate.py  fit.py
SITL V2/src/koopman_python/koopman_python/experiments/: __init__.py  figures.py  offline_learned_mpc.py  offline_quantized.py  offline_unquantized.py  reference_scenarios.py
SITL V2/src/koopman_python/koopman_python/mpc/: __init__.py  qp.py  runtime.py  simulate.py
SITL V2/src/koopman_python/koopman_python/quantization/: __init__.py  dither.py  partition.py
SITL V2/src/koopman_python/koopman_python/training/: __init__.py  pid_trajectories.py  random_trajectories.py
SITL/src/quantized_quadrotor_sitl/: package.xml  setup.cfg  setup.py
SITL/src/quantized_quadrotor_sitl/config/: runtime.yaml  runtime_identification.yaml  runtime_sitl_retrain_edmd.yaml  runtime_sitl_retrain_edmd_anchor.yaml  runtime_sitl_retrain_edmd_anchor_h8.yaml  runtime_sitl_retrain_edmd_light.yaml  runtime_sitl_retrain_edmd_light_anchor.yaml  runtime_sitl_retrain_edmd_light_anchor40.yaml  runtime_sitl_retrain_edmd_light_conservative.yaml  runtime_sitl_retrain_edmd_light_latest.yaml  runtime_sitl_retrain_edmd_light_minimal_residual.yaml  runtime_sitl_retrain_edmd_light_regularized.yaml
SITL/src/quantized_quadrotor_sitl/launch/: quantized_quadrotor_sitl.launch.py
SITL/src/quantized_quadrotor_sitl/quantized_quadrotor_sitl/: __init__.py
SITL/src/quantized_quadrotor_sitl/quantized_quadrotor_sitl/controllers/: __init__.py  baseline.py
SITL/src/quantized_quadrotor_sitl/quantized_quadrotor_sitl/core/: __init__.py  artifacts.py  config.py  types.py
SITL/src/quantized_quadrotor_sitl/quantized_quadrotor_sitl/dynamics/: __init__.py  params.py  srb.py
SITL/src/quantized_quadrotor_sitl/quantized_quadrotor_sitl/edmd/: __init__.py  basis.py  evaluate.py  fit.py
SITL/src/quantized_quadrotor_sitl/resource/: quantized_quadrotor_sitl
(+421 files in other folders)
