<?xml version="1.0"?>
<package format="2">
  <name>koopman_mpc_ros</name>
  <version>0.0.1</version>
  <description>ROS1 wrapper package for the fresh SITL V2 learned EDMD-MPC controller.</description>

  <maintainer email="max@example.com">Max Heil</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>koopman_python</depend>
  <depend>mav_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
</package>
