<?xml version="1.0"?>
<package format="2">
  <name>koopman_python</name>
  <version>0.0.1</version>
  <description>Fresh Python EDMD/Koopman MPC reimplementation for SITL V2.</description>

  <maintainer email="max@example.com">Max Heil</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
</package>
